<resources>
    <string name="app_name">DiaryAI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Diary AI</string>
    <string name="prev">이전으로</string>
    <string name="next">다음으로</string>
    <string name="refresh">새로고침</string>
    <string name="home">홈으로</string>
    <string name="clip">클립보드에\n복사</string>
    <string name="eval">평가하기</string>
    <string name="title_result2">마음에 드시나요?</string>
    <string name="analyze">분석하기</string>
    <string name="showresult">결과보기</string>
    <string name="evaluate">평가하기</string>
    <string name="show_result">결과 보기</string>
    <string name="tmp_id">01</string>
    <string name="tmp_title">제목</string>
    <string name="satisfy">만족도</string>
    <string name="right">정확도</string>
    <string name="same">유사도</string>
    <string name="intro">diary AI는 카카오특을 기반으로\n세줄 일기를 자동으로\n생성해주는 서비스입니다.\n\n1. 카카오톡 채팅방에서 파일 내보내기를 선택한다.\n2. diaryAI 어플에서 파일을 선택한다.\n3. 파일 전송하기를 통해 전송한다.</string>
</resources>