<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ResultFragment3">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/title_result2"
            android:textSize="45sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55"
            android:gravity="center"
            android:padding="15sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="만족도"
                android:textSize="32sp"/>

            <RatingBar
                android:id="@+id/ratingBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="3"
                android:stepSize="0.5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="만족도"
                android:textSize="32sp"/>

            <RatingBar
                android:id="@+id/ratingBar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="3"
                android:stepSize="0.5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="만족도"
                android:textSize="32sp"/>

            <RatingBar
                android:id="@+id/ratingBar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="3"
                android:stepSize="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/evaluate"
                android:layout_width="120sp"
                android:layout_height="match_parent"
                android:text="@string/evaluate" />

            <Space
                android:layout_width="100sp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/home"
                android:layout_width="120sp"
                android:layout_height="match_parent"
                android:text="@string/home" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1" />
    </LinearLayout>

</FrameLayout>